# Team02-ADAS_SIL

./: .gitignore  README.md  requirements.txt  setup.py  test.py
adas_sil/control/: CameraManager.py  controller.py  controller2.py  controller_old.py  display.py
adas_sil/control/vehicle_controller/: mpc_controller.py  pid_controller.py
adas_sil/cpp_postprocessing/: CMakeLists.txt  CMakeLists_original.txt  IPM.cpp  IPM.hpp  IVehicleController.hpp  KalmanFilter.cpp  KalmanFilter.hpp  LaneDetector.cpp  LaneDetector.hpp  LaneDetectorIPM.cpp  LaneDetectorIPM.hpp  LaneDetectorIPM_new.cpp  LaneDetectorIPM_new.hpp  LaneProcessor.cpp  LaneProcessor.hpp  MPController.cpp  MPController.hpp  PidController.cpp  PidController.hpp  PythonBinding.cpp  PythonBinding_IPM.cpp  PythonBinding_LaneDetectorIPM.cpp  PythonBinding_MPC.cpp  PythonBinding_PidController.cpp  XboxController.cpp  XboxController.hpp  combinedControl.cpp  combinedControlMPC.cpp
adas_sil/perception/: Detection.py
adas_sil/simulation/: carla_setup.py
scripts/: run_simulation.py
